# PrimeHost

./: AGENTS.md  CMakeLists.txt  README.md
docs/: api-signatures.md  api.md  audio.md  input-devices.md  input-semantics.md  presentation-config.md  primehost-plan.md
examples/: primehost_app.cpp  primehost_gamepad_audio.cpp  primehost_primestage_demo.cpp  primehost_primestage_demo.mm  primehost_stub.cpp
include/PrimeHost/: Audio.h  AudioConfigDefaults.h  Fps.h  FrameConfigUtil.h  FrameConfigValidation.h  Host.h  PrimeHost.h  Timing.h
scripts/: compile.sh
src/: AudioConfigValidation.h  DeviceNameMatch.h  FrameConfigDefaults.h  FrameConfigValidation.h  FrameDiagnosticsUtil.h  FrameLimiter.h  GamepadProfiles.cpp  GamepadProfiles.h  PlatformDisplayUtil.h  PlatformInputUtil.h  PlatformTimeUtil.h  PrimeHost.cpp  PrimeHostAudio.cpp  PrimeHostFps.cpp  SizeUtil.h  TextBuffer.h
src/demo/: TextSelection.h
src/platform/macos/: AudioMac.mm  HostMac.mm
tests/unit/: test_app_paths.cpp  test_audio_config_defaults.cpp  test_audio_config_validation.cpp  test_audio_smoke.cpp  test_clipboard.cpp  test_clipboard_image.cpp  test_clipboard_paths.cpp  test_clipboard_size.cpp  test_cursor_image.cpp  test_cursor_shape.cpp  test_cursor_visible.cpp  test_device_name_match.cpp  test_devices.cpp  test_display_hdr.cpp  test_display_interval.cpp  test_displays.cpp  test_drop_event.cpp  test_event_buffer.cpp  test_event_defaults.cpp  test_event_payload.cpp  test_file_dialogs.cpp  test_focus_event.cpp  test_focus_frame.mm  test_fps.cpp  test_frame_config_defaults.cpp  test_frame_config_query.cpp  test_frame_config_set.cpp  test_frame_config_util.cpp  test_frame_config_validation.cpp  test_frame_diagnostics.cpp  test_frame_limiter.cpp  test_frame_timing.cpp  test_framebuffer.cpp  test_gamepad_ids.cpp  test_gamepad_profiles.cpp  test_headless_surface.cpp  test_helpers.h  test_host_callbacks.cpp  test_host_extensions.cpp  test_host_limiter_timer.cpp  (+35 more)
